createEmployee api, add pitmutation